# OpenBootCamp_Apuntes

00-Retos/Reto-01/: contacts.xlsx  main.py  pyproject.toml  reto-01.md
01-Introduccion_Programacion/: 1.1-Historia_programacion.md  10.1-Metodos_clase.md  2.1-Tipos-Datos.md  3.1-Funciones.md  4.1-Condicionales.md  5.1-Errores_Programador.md  6.1-Depuracion_codigo.md  7.1-Introduccion_poo.md  8.1-Privacidad_Encapsulacion_Abstraccion.md  9.1-Herencias_Poliformismo_Interfaces.md
02-Python/: 1.1-Que_es_Python.md  10.1-GUI.md  11.1-Bases_de_Datos.md  11.2-BD_Python_conect.md  12.1-Django.md  12.2-Crear_Proyecto_Django.md  12.3-Front-End_Django.md  2.1-Pip_modulos.md  3.1-Objetos.md  3.2-Metodos_Operaciones.md  4.1-Control_Flujo.md  4.2-Sentencias_Condicionales.md  5.1-Funciones.md  6.1-Clases_Objetos.md  6.2-Clases_abstractas.md  6.3-HAS-A.md  7.1-Modulos.md  7.2-Paquetes.md  7.3-Ambitos.md  8.1-Entrada_y_Salida.md  8.2-Metodos_cadena.md  8.3-Manipulacion_ficheros.md  8.4-Serializar_datos.md  9.1-Funciones_BuildIn.md  9.2-Map_Filter_Reduce.md  9.3-Mas_Built-in.md
03-Java_Basico/: 1.1-Java.md  1.10-Sentencias_if_else.md  1.11-Bucles_FOR.md  1.13-Continue_Break.md  1.15-Classes.md  1.16-Objetos.md  1.17-Herencia.md  1.20-Polimorfismo.md  1.21-Clases-Abstractas.md  1.6-Palabras_Reservadas.md  1.9-Sobrecarga_Funciones.md
03-Java_Basico(Freeze)/: 1.12-Bucles_WHILE.md  1.14-Switch.md  1.18-Metodo_Super.md  1.19-Sobreescritura.md  1.3-Comentarios.md  1.4-Variables.md  1.5-Operadores.md  1.6-Palabras_Reservadas.md  1.7-Funciones.md  1.8-Ambito_Retorno.md
(+86 files in other folders)
